--- a/velotix/eureka-server/src/main/resources/application.properties
+++ b/velotix/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-server.port=8080
-spring.application.name=booking-service
+server.port=8761
+spring.application.name=eureka-server
 
-eureka.client.service-url.defaultZone=http://eureka-server:8080/eureka/
-
-springdoc.swagger-ui.path=/swagger-ui.html
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
