--- a/velotix/booking-service/src/main/resources/application.properties
+++ b/velotix/booking-service/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-server.port=8080
+server.port=8082
 spring.application.name=booking-service
 
-eureka.client.service-url.defaultZone=http://eureka-server:8080/eureka/
+# Eureka URL (service name + real Eureka port)
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
 
+# Swagger UI (unchanged)
 springdoc.swagger-ui.path=/swagger-ui.html
