--- a/velotix/event-service/src/main/resources/application.properties
+++ b/velotix/event-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 spring.application.name=event-service
 
 spring.datasource.url=jdbc:postgresql://postgres:5432/eventdb
@@ -7,6 +7,8 @@ spring.datasource.password=eventpass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-eureka.client.service-url.defaultZone=http://eureka-server:8080/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
 
 springdoc.swagger-ui.path=/swagger-ui.html
