--- a/velotix/notification-service/src/main/resources/application.properties
+++ b/velotix/notification-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.port=8080
+server.port=8083
 spring.application.name=notification-service
 
-eureka.client.service-url.defaultZone=http://eureka-server:8080/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
