--- a/velotix/pom.xml
+++ b/velotix/pom.xml
@@ -20,11 +20,13 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>eureka-server</module>
-        <module>event-service</module>
-        <module>booking-service</module>
-        <module>notification-service</module>
+    <module>eureka-server</module>
+    <module>event-service</module>
+    <module>booking-service</module>
+    <module>notification-service</module>
+    <module>api-gateway</module>
     </modules>
+
 
     <properties>
         <java.version>17</java.version>
